hiden eye mobile version

--- a/app/less/anim.less
+++ b/app/less/anim.less
@@ -99,6 +99,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  .sm-block({
+    display: none;
+  });
 }
 
 .wrap_eye {
